--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.5",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.23.5",
     "feather-icons": "^4.29.0",
