--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.23.5",
     "feather-icons": "^4.29.0",
+    "tracking": "^1.1.3",
     "vue": "^3.2.37",
     "vue-cool-lightbox": "^2.7.5",
     "vue-count-to": "^1.0.13",
